--- a/ProductieSysteemBuild2/ProductieSysteemBuild2/Views/web.config
+++ b/ProductieSysteemBuild2/ProductieSysteemBuild2/Views/web.config
@@ -26,6 +26,10 @@
   </appSettings>
 
   <system.webServer>
+    <modules>
+      
+      <remove name="RoleManager" />
+    </modules>
     <handlers>
       <remove name="BlockViewHandler"/>
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
