--- a/ProductieSysteemBuild2/ProductieSysteemBuild2/ProductieSysteemBuild2.csproj
+++ b/ProductieSysteemBuild2/ProductieSysteemBuild2/ProductieSysteemBuild2.csproj
@@ -175,6 +175,8 @@
     <Content Include="Views\Account\Roles.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\CreateUser.cshtml" />
+    <Content Include="Views\Shared\_UserLayout.cshtml" />
+    <Content Include="Views\Dashboard\index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -184,7 +186,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Dashboard\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
