--- a/ProductieSysteemBuild2/ProductieSysteemBuild2/Web.config
+++ b/ProductieSysteemBuild2/ProductieSysteemBuild2/Web.config
@@ -22,6 +22,23 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
+    <roleManager defaultProvider="myRoleProvider" enabled="true">
+      <providers>
+        <clear/>
+        <add
+          name="myRoleProvider"
+          type="System.Web.Security.SqlRoleProvider"
+          connectionStringName="DefaultConnection"
+          applicationName="/" />
+      </providers>
+    </roleManager>
+    <!--<roleManager defaultProvider="AspNetSqlRoleProvider" enabled="true" cacheRolesInCookie="true" cookieName=".ASPROLES"
+     cookieTimeout="30" cookiePath="/" cookieRequireSSL="false" cookieSlidingExpiration="true" cookieProtection="All" >
+      <providers>
+        <add name="RoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="DefaultConnection"  applicationName="ProductieSysteemBuild2" />
+      </providers>
+    </roleManager>-->
+
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
