--- a/ProductieSysteemBuild2/ProductieSysteemBuild2/bin/ProductieSysteemBuild2.dll.config
+++ b/ProductieSysteemBuild2/ProductieSysteemBuild2/bin/ProductieSysteemBuild2.dll.config
@@ -24,12 +24,8 @@
     </authentication>
     <roleManager defaultProvider="myRoleProvider" enabled="true">
       <providers>
-        <clear/>
-        <add
-          name="myRoleProvider"
-          type="System.Web.Security.SqlRoleProvider"
-          connectionStringName="DefaultConnection"
-          applicationName="/" />
+        <clear />
+        <add name="myRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="DefaultConnection" applicationName="/" />
       </providers>
     </roleManager>
     <!--<roleManager defaultProvider="AspNetSqlRoleProvider" enabled="true" cacheRolesInCookie="true" cookieName=".ASPROLES"
@@ -78,7 +74,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
+  <!--<connectionStrings>
     <add name="DefaultConnection" connectionString="data source=h2437976.stratoserver.net;initial catalog=ProductieSysteem;user id=Daan;password=Maaskantje_95;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  </connectionStrings>
-</configuration>
+  </connectionStrings>-->
+<connectionStrings><add name="DataContext" connectionString="data source=h2437976.stratoserver.net;initial catalog=ProductieSysteem;user id=Daan;password=Maaskantje_95;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" /><add name="DefaultConnection" connectionString="data source=h2437976.stratoserver.net;initial catalog=ProductieSysteem;user id=Daan;password=Maaskantje_95;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
