--- a/ProductieSysteemBuild2/ProductieSysteemBuild2/ProductieSysteemBuild2.csproj
+++ b/ProductieSysteemBuild2/ProductieSysteemBuild2/ProductieSysteemBuild2.csproj
@@ -136,16 +136,15 @@
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Content\bootstrap.css.map" />
     <None Include="Properties\PublishProfiles\ProductieSysteem.pubxml" />
-    <None Include="Scripts\jquery-1.9.1.intellisense.js" />
     <Content Include="Icon.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="Scripts\jquery-1.9.1.js" />
-    <Content Include="Scripts\jquery-1.9.1.min.js" />
+    <None Include="Scripts\jquery-2.1.4.intellisense.js" />
+    <Content Include="Scripts\jquery-2.1.4.js" />
+    <Content Include="Scripts\jquery-2.1.4.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\npm.js" />
     <Content Include="Web.config" />
-    <Content Include="Scripts\jquery-1.9.1.min.map" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -190,6 +189,9 @@
     <Content Include="Views\Default1\Edit.cshtml" />
     <Content Include="Views\Default1\Index.cshtml" />
     <Content Include="Views\Productie\View1.cshtml" />
+    <Content Include="Views\Productie\Week.cshtml" />
+    <Content Include="Views\Productie\Dag.cshtml" />
+    <Content Include="Scripts\jquery-2.1.4.min.map" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
