--- a/ProductieSysteemV1.0/ProductieSysteemV1.0/ProductieSysteemV1.0.csproj
+++ b/ProductieSysteemV1.0/ProductieSysteemV1.0/ProductieSysteemV1.0.csproj
@@ -160,11 +160,18 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\OverviewController.cs" />
+    <Compile Include="Controllers\ProductionController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\DayProduction.cs" />
+    <Compile Include="Models\DayViewModel.cs" />
+    <Compile Include="Models\G_Rule.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\WeekProduction.cs" />
+    <Compile Include="Models\WeekViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -222,6 +229,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Overview\" />
+    <Folder Include="Views\Produciton\" />
+    <Folder Include="Views\Production\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
