--- a/ProductieSysteemV1.0/ProductieSysteemV1.0/Web.config
+++ b/ProductieSysteemV1.0/ProductieSysteemV1.0/Web.config
@@ -8,8 +8,8 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-ProductieSysteemV1.0-20150601061918.mdf;Initial Catalog=aspnet-ProductieSysteemV1.0-20150601061918;Integrated Security=True"
+ <connectionStrings>
+    <add name="DefaultConnection" connectionString="data source=h2437976.stratoserver.net;initial catalog=ProductieSysteem;user id=Application;password=k9YdZwZ78W0UpjP;multipleactiveresultsets=True;application name=EntityFramework"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -22,6 +22,12 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
+   <roleManager defaultProvider="myRoleProvider" enabled="true">
+      <providers>
+        <clear />
+        <add name="myRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="DefaultConnection" applicationName="/" />
+      </providers>
+    </roleManager>
   </system.web>
   <system.webServer>
     <modules>
