--- a/ProductieSysteemV1.0/ProductieSysteemV1.0/Web.config
+++ b/ProductieSysteemV1.0/ProductieSysteemV1.0/Web.config
@@ -70,4 +70,14 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <system.net>
+    <mailSettings>
+      <smtp from="daankleindop@hotmail.com">
+        <network host="smtp.live.com"
+                 userName="daankleindop@hotmail.com"
+                 password="maaskantje"
+                 enableSsl="true" />
+      </smtp>
+    </mailSettings>
+  </system.net>
 </configuration>
