--- a/ProductieSysteemV1.0/ProductieSysteemV1.0/ProductieSysteemV1.0.csproj
+++ b/ProductieSysteemV1.0/ProductieSysteemV1.0/ProductieSysteemV1.0.csproj
@@ -179,7 +179,6 @@
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Models\WeekProduction.cs" />
     <Compile Include="Models\WeekViewModel.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -192,7 +191,6 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ClassDiagram1cd.cd" />
-    <None Include="Properties\PublishProfiles\File.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -236,6 +234,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
