--- a/ProductieSysteemV1.0/ProductieSysteemV1.0/Web.config
+++ b/ProductieSysteemV1.0/ProductieSysteemV1.0/Web.config
@@ -75,7 +75,7 @@
       <smtp from="daankleindop@hotmail.com">
         <network host="smtp.live.com"
                  userName="daankleindop@hotmail.com"
-                 password="maaskantje"
+                 password="kleindop112"
                  enableSsl="true" />
       </smtp>
     </mailSettings>
