--- a/ProductieSysteemV1.0/ProductieSysteemV1.0/Web.config
+++ b/ProductieSysteemV1.0/ProductieSysteemV1.0/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
  <connectionStrings>
-    <add name="DefaultConnection" connectionString="data source=h2437976.stratoserver.net;initial catalog=ProductieSysteem;user id=Application;password=k9YdZwZ78W0UpjP;multipleactiveresultsets=True;application name=EntityFramework"
+    <add name="DefaultConnection" connectionString="data source=h2437976.stratoserver.net;initial catalog=ProductieSysteem;user id=Daan;password=Maaskantje_95;multipleactiveresultsets=True;application name=EntityFramework"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
